crates/oxc_react_compiler/tests/snapshots/simple-alias.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/simple-alias.js
---
import { c as _c } from "react/compiler-runtime";
function mutate() {}
function foo() {
	const $ = _c(2);
	let a;
	let c;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		let b = {};
		c = {};
		a = b;
		b = c;
		c = a;
		mutate(a, b);
		$[0] = c;
		$[1] = a;
	} else {
		c = $[0];
		a = $[1];
	}
	return c;
}
