crates/oxc_react_compiler/tests/snapshots/simple-function-1.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/simple-function-1.js
---
function component() {
	const x = _temp;
	return x;
}
function _temp(a) {
	a.foo();
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: [],
	isComponent: false
};
