crates/oxc_react_compiler/tests/snapshots/simple-scope.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/simple-scope.js
---
import { c as _c } from "react/compiler-runtime";
function foo(a) {
	const $ = _c(2);
	let t0;
	if ($[0] !== a.b) {
		t0 = [a.b];
		$[0] = a.b;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const x = t0;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
