crates/oxc_react_compiler/tests/snapshots/skip-useMemoCache.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/skip-useMemoCache.js
---
// @expectNothingCompiled
import { c as useMemoCache } from "react/compiler-runtime";
function Component(props) {
	const $ = useMemoCache();
	let x;
	if ($[0] === undefined) {
		x = [props.value];
		$[0] = x;
	} else {
		x = $[0];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 42 }]
};
