crates/oxc_react_compiler/tests/snapshots/ssa-complex-single-if.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-complex-single-if.js
---
function foo() {}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [],
	isComponent: false
};
