crates/oxc_react_compiler/tests/snapshots/ssa-for-of.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-for-of.js
---
import { c as _c } from "react/compiler-runtime";
function foo(cond) {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = [];
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const items = t0;
	for (const item of items) {
		if (cond) {}
	}
	return items;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
